--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "将完整的页面保存到一个 HTML 文件中",
+        "message": "将页面保存到自解压式 HTML/ZIP 混合文件中",
         "description": "扩展描述。"
     },
     "menuSavePage": {
