description of the extension in english (temp fix)

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Speichern einer kompletten Webseite in eine einzige HTML-Datei",
+        "message": "Save web pages as self-extracting HTML/ZIP hybrid files",
         "description": "Description of the extension."
     },
     "menuSavePage": {
