--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -167,6 +167,10 @@
         "message": "compresser le contenu HTML",
         "description": "Options page label: 'compress HTML content'"
     },
+    "optionInsertTextBody": {
+        "message": "rendre le texte cherchable",
+        "description": "Options page label: 'make text searchable'"
+    },
     "optionRemoveImports": {
         "message": "supprimer les imports HTML",
         "description": "Options page label: 'remove HTML imports'"
