--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -167,6 +167,10 @@
         "message": "压缩 HTML 内容",
         "description": "选项页标签: '压缩 HTML 内容'"
     },
+    "optionInsertTextBody": {
+        "message": "make text searchable",
+        "description": "Options page label: 'make text searchable'"
+    },
     "optionRemoveImports": {
         "message": "移除 HTML 导入",
         "description": "选项页标签: '移除 HTML 导入'"
