--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionDescription": {
-        "message": "Save web pages as self-extracting HTML/ZIP hybrid files",
+        "message": "Zapisz strony internetowe jako samowyodrębniające się hybrydowe pliki HTML/ZIP",
         "description": "Description of the extension."
     },
     "menuSavePage": {
