added "save pages in background" option (fixes #26 and workaround for #25)

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -339,6 +339,10 @@
         "message": "Sonstiges",
         "description": "Options sub-title: 'Misc.'"
     },
+	"optionBackgroundSave": {
+		"message": "Speicherung der Seiten im Hintergrund",
+		"description": "Options page label: 'save pages in background'"
+	},
     "optionDisplayStats": {
         "message": "Statistik nach Verarbeitung in der Konsole anzeigen",
         "description": "Options page label: 'display stats in the console after processing'"
