--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -339,6 +339,10 @@
         "message": "Misc.",
         "description": "Options sub-title: 'Misc.'"
     },
+	"optionBackgroundSave": {
+		"message": "save pages in background",
+		"description": "Options page label: 'save pages in background'"
+	},
     "optionDisplayStats": {
         "message": "display stats in the console after processing",
         "description": "Options page label: 'display stats in the console after processing'"
