--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -339,6 +339,10 @@
         "message": "Divers",
         "description": "Options sub-title: 'Misc.'"
     },
+	"optionBackgroundSave": {
+		"message": "sauvegarder la page en tâche de fond",
+		"description": "Options page label: 'save pages in background'"
+	},
     "optionDisplayStats": {
         "message": "afficher les statistiques dans la console après la sauvegarde",
         "description": "Options page label: 'display stats in the console after processing'"
