--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -339,6 +339,10 @@
         "message": "Разное",
         "description": "Options sub-title: 'Misc.'"
     },
+	"optionBackgroundSave": {
+		"message": "сохранять страницы в фоновом режиме",
+		"description": "Options page label: 'save pages in background'"
+	},
     "optionDisplayStats": {
         "message": "отображать статистику в консоли после обработки",
         "description": "Options page label: 'display stats in the console after processing'"
