--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -87,6 +87,10 @@
         "message": "保存进度：",
         "description": "保存时候的按钮标题: '保存进度：xx%'"
     },
+	"buttonUploadProgressTooltip": {
+		"message": "Upload progress: ",
+		"description": "Button title during save: 'Upload progress: xx%'"
+	},
     "buttonOKBadge": {
         "message": "完成",
         "description": "徽标标签: 'OK'"
@@ -359,6 +363,10 @@
         "message": "保存原始页面",
         "description": "选项页标签: '保存原始页面'"
     },
+	"optionSaveToGDrive": {
+		"message": "save to Google Drive",
+		"description": "Options page label: 'save to Google Drive'"
+	},
     "optionsHelpLink": {
         "message": "帮助",
         "description": "选项页帮助链接"
