--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -87,6 +87,10 @@
         "message": "Progression de la sauvegarde : ",
         "description": "Button title during save: 'Save progress: xx%'"
     },
+	"buttonUploadProgressTooltip": {
+		"message": "Progression de l'envoi: ",
+		"description": "Button title during save: 'Upload progress: xx%'"
+	},
     "buttonOKBadge": {
         "message": "OK",
         "description": "Badge label: 'OK'"
@@ -359,6 +363,10 @@
         "message": "sauvegarder la page brute",
         "description": "Options page label: 'save raw page'"
     },
+	"optionSaveToGDrive": {
+		"message": "sauvegarder dans Google Drive",
+		"description": "Options page label: 'save to Google Drive'"
+	},
     "optionsHelpLink": {
         "message": "aide (anglais)",
         "description": "Options help link"
