--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -87,6 +87,10 @@
         "message": "進行状況を保存: ",
         "description": "Button title during save: 'Save progress: xx%'"
     },
+	"buttonUploadProgressTooltip": {
+		"message": "Progression de l'envoi: ",
+		"description": "Button title during save: 'Upload progress: xx%'"
+	},
     "buttonOKBadge": {
         "message": "OK",
         "description": "Badge label: 'OK'"
@@ -363,6 +367,10 @@
         "message": "ヘルプ",
         "description": "Options help link"
     },
+	"optionSaveToGDrive": {
+		"message": "save to Google Drive",
+		"description": "Options page label: 'save to Google Drive'"
+	},
     "optionsResetButton": {
         "message": "リセット",
         "description": "Options button: 'Reset'"
